crates/toml/tests/snapshots/invalid/float/leading-zero-plus.stderr
TOML parse error at line 1, column 22
  |
1 | leading-zero-plus = +03.14
  |                      ^
unexpected leading zero, expected nothing
